--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
+    "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand --silent"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
+    "dotenv": "^16.0.0",
     "express": "4.17.3",
     "helmet": "5.0.2",
     "jsonwebtoken": "^8.5.1",
